--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="password">Password</string>
     <string name="e_mail">E-mail</string>
     <string name="ingredients">Ingredients:</string>
-    <string name="ooking_recipe">Сooking recipe:</string>
+    <string name="cooking_recipe">Сooking recipe:</string>
     <string name="profile">Profile</string>
     <string name="favorite">Favorite</string>
     <string name="recipes">Recipes</string>
